# netsuite-rust-client

./: .gitignore  Cargo.toml  NETSUITE_ENDPOINTS.md  README.md
comments/: NETSUITE_ENDPOINTS.md  SETUP_SUMMARY.md
config/: default.toml
examples/: basic_usage.rs  transaction_query.rs
src/: cli.rs  config.rs  lib.rs  main.rs  netsuite_client.rs
