[package]
name = "netsuite-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "netsuite_client"
path = "src/lib.rs"

[[bin]]
name = "netsuite-client"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# OAuth and authentication
oauth2 = "4.4"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration and environment
config = "0.13"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
